[package]
name = "tz-convert"
author = "Little Clover <littleclover909@gmail.com>"
version = "1.0.0"
edition = "2021"
about = "A simple timezone converter"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
regex = "1"
